testsuite/omsimulator/connections.mos
// name:     DualMassOscillator.mos
// status:   correct
// teardown_command: rm -rf temp_connections

setCommandLineOptions("-g=MetaModelica");

echo(false);
loadString("
function printStatus
  input Integer status;
  input Integer expected;
protected
  String outstatus;
  String cmp=\" \";
algorithm
  if (status==expected) then
    cmp := \"correct\";
  else
    cmp := \"wrong\";
  end if;
  if 0 == status then
    outstatus := \" ok\";
  elseif 1 == status then
    outstatus := \" warning\";
  elseif 3 == status then
    outstatus := \" error\";
  end if;
  print(\"status:  [\" + cmp  + \"]\" + outstatus);
  print(\"\n\");
end printStatus;");

oms_setCommandLineOption("--suppressPath=true");

status := oms_setTempDirectory("./temp_connections/");
printStatus(status, 0);

status := oms_newModel("model");
printStatus(status, 0);

status := oms_addSystem("model.wc", OpenModelica.Scripting.oms_system.oms_system_wc);
printStatus(status, 0);

status := oms_addSystem("model.wc.sc1", OpenModelica.Scripting.oms_system.oms_system_sc);
printStatus(status, 0);

status := oms_addSystem("model.wc.sc2", OpenModelica.Scripting.oms_system.oms_system_sc);
printStatus(status, 0);

status := oms_addConnector("model.wc.sc1.u1", OpenModelica.Scripting.oms_causality.oms_causality_input, OpenModelica.Scripting.oms_signal_type.oms_signal_type_real);
status := oms_addConnector("model.wc.sc1.u2", OpenModelica.Scripting.oms_causality.oms_causality_input, OpenModelica.Scripting.oms_signal_type.oms_signal_type_real);
status := oms_addConnector("model.wc.sc1.y", OpenModelica.Scripting.oms_causality.oms_causality_output, OpenModelica.Scripting.oms_signal_type.oms_signal_type_real);
printStatus(status, 0);

status := oms_addConnector("model.wc.sc2.y1", OpenModelica.Scripting.oms_causality.oms_causality_output, OpenModelica.Scripting.oms_signal_type.oms_signal_type_real);
status := oms_addConnector("model.wc.sc2.y2", OpenModelica.Scripting.oms_causality.oms_causality_output, OpenModelica.Scripting.oms_signal_type.oms_signal_type_integer);
status := oms_addConnector("model.wc.sc2.y3", OpenModelica.Scripting.oms_causality.oms_causality_output, OpenModelica.Scripting.oms_signal_type.oms_signal_type_real);
printStatus(status, 0);

status := oms_addConnection("model.wc.sc1.u1", "model.wc.sc2.y1");
printStatus(status, 0);

//Connecting input to input (illegal)
status := oms_addConnection("model.wc.sc1.y", "model.wc.sc2.y3");
printStatus(status, 3);

//Connecting Real to Integer (illegal)
status := oms_addConnection("model.wc.sc1.u2", "model.wc.sc2.y2");
printStatus(status, 3);

//Connecting to already connected connector (illegal)
status := oms_addConnection("model.wc.sc1.u1", "model.wc.sc2.y3");
printStatus(status, 3);

(status,src) := oms_list("model.wc");
print(src);

status := oms_deleteConnection("model.wc.sc1.u1", "model.wc.sc2.y1");
printStatus(status, 0);

(status,src) := oms_list("model.wc");
print(src);

status := oms_delete("model");
printStatus(status, 0);

// Result:
// true
// status:  [correct] ok
// status:  [correct] ok
// status:  [correct] ok
// status:  [correct] ok
// status:  [correct] ok
// status:  [correct] ok
// status:  [correct] ok
// status:  [correct] ok
// error:   [addConnection] Causality mismatch in connection: sc1.y -> sc2.y3
// status:  [correct] error
// error:   [addConnection] Type mismatch in connection: sc1.u2 -> sc2.y2
// status:  [correct] error
// error:   [addConnection] Connector is already connected: sc1.u1
// status:  [correct] error
// <?xml version="1.0"?>
// <ssd:System name="wc">
// 	<ssd:SimulationInformation>
// 		<FixedStepMaster description="oms-ma" stepSize="0.100000" />
// 	</ssd:SimulationInformation>
// 	<ssd:Elements>
// 		<ssd:System name="sc2">
// 			<ssd:SimulationInformation>
// 				<VariableStepSolver description="cvode" absoluteTolerance="0.000100" relativeTolerance="0.000100" minimumStepSize="0.000100" maximumStepSize="0.100000" initialStepSize="0.000100" />
// 			</ssd:SimulationInformation>
// 			<ssd:Elements />
// 			<ssd:Connectors>
// 				<ssd:Connector name="y1" kind="output" type="Real" />
// 				<ssd:Connector name="y2" kind="output" type="Integer" />
// 				<ssd:Connector name="y3" kind="output" type="Real" />
// 			</ssd:Connectors>
// 			<ssd:Connections />
// 		</ssd:System>
// 		<ssd:System name="sc1">
// 			<ssd:SimulationInformation>
// 				<VariableStepSolver description="cvode" absoluteTolerance="0.000100" relativeTolerance="0.000100" minimumStepSize="0.000100" maximumStepSize="0.100000" initialStepSize="0.000100" />
// 			</ssd:SimulationInformation>
// 			<ssd:Elements />
// 			<ssd:Connectors>
// 				<ssd:Connector name="u1" kind="input" type="Real" />
// 				<ssd:Connector name="u2" kind="input" type="Real" />
// 				<ssd:Connector name="y" kind="output" type="Real" />
// 			</ssd:Connectors>
// 			<ssd:Connections />
// 		</ssd:System>
// 	</ssd:Elements>
// 	<ssd:Connectors />
// 	<ssd:Connections>
// 		<ssd:Connection startElement="sc2" startConnector="y1" endElement="sc1" endConnector="u1" />
// 	</ssd:Connections>
// </ssd:System>
// status:  [correct] ok
// <?xml version="1.0"?>
// <ssd:System name="wc">
// 	<ssd:SimulationInformation>
// 		<FixedStepMaster description="oms-ma" stepSize="0.100000" />
// 	</ssd:SimulationInformation>
// 	<ssd:Elements>
// 		<ssd:System name="sc2">
// 			<ssd:SimulationInformation>
// 				<VariableStepSolver description="cvode" absoluteTolerance="0.000100" relativeTolerance="0.000100" minimumStepSize="0.000100" maximumStepSize="0.100000" initialStepSize="0.000100" />
// 			</ssd:SimulationInformation>
// 			<ssd:Elements />
// 			<ssd:Connectors>
// 				<ssd:Connector name="y1" kind="output" type="Real" />
// 				<ssd:Connector name="y2" kind="output" type="Integer" />
// 				<ssd:Connector name="y3" kind="output" type="Real" />
// 			</ssd:Connectors>
// 			<ssd:Connections />
// 		</ssd:System>
// 		<ssd:System name="sc1">
// 			<ssd:SimulationInformation>
// 				<VariableStepSolver description="cvode" absoluteTolerance="0.000100" relativeTolerance="0.000100" minimumStepSize="0.000100" maximumStepSize="0.100000" initialStepSize="0.000100" />
// 			</ssd:SimulationInformation>
// 			<ssd:Elements />
// 			<ssd:Connectors>
// 				<ssd:Connector name="u1" kind="input" type="Real" />
// 				<ssd:Connector name="u2" kind="input" type="Real" />
// 				<ssd:Connector name="y" kind="output" type="Real" />
// 			</ssd:Connectors>
// 			<ssd:Connections />
// 		</ssd:System>
// 	</ssd:Elements>
// 	<ssd:Connectors />
// 	<ssd:Connections />
// </ssd:System>
// status:  [correct] ok
// info:    0 warnings
// info:    3 errors
// endResult
